--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compu-Foundation 360° | Basic Computer Fundamentals</title>
     <meta name="description" content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to learn computer basics today." />
