--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Compu-Foundation 360° | Basic Computer Fundamentals</title>
-    <meta name="description" content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to learn computer basics today." />
-    <meta name="author" content="Compu-Foundation 360°" />
 
-    <meta property="og:title" content="Compu-Foundation 360° | Basic Computer Fundamentals" />
-    <meta property="og:description" content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to master computer basics today." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Compu-Foundation 360° | Basic Computer Fundamentals</title>
+  <meta name="description"
+    content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to learn computer basics today." />
+  <meta name="author" content="Compu-Foundation 360°" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Compu-Foundation 360° | Basic Computer Fundamentals" />
+  <meta property="og:description"
+    content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to master computer basics today." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Lovable" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
