--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="/app-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compu-Foundation 360° | Basic Computer Fundamentals</title>
   <meta name="description"
