--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
   <meta property="og:description"
     content="Learn computer fundamentals with interactive lessons, visual diagrams, and quizzes. Start your journey to master computer basics today." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://computech-foundation-a894d.web.app/app-logo.png" />
+  <meta property="og:image" content="https://computech-foundation-a894d.web.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="Compu-Foundation 360° Logo" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://computech-foundation-a894d.web.app/app-logo.png" />
+  <meta name="twitter:image" content="https://computech-foundation-a894d.web.app/og-image.png" />
+  <meta name="twitter:image:alt" content="Compu-Foundation 360° Logo" />
 </head>
 
 <body>
